fix(header): adjusting the gaps between the menu lines to match the layout (1024 pixels)

--- a/assets/sass/components/_header.scss
+++ b/assets/sass/components/_header.scss
@@ -17,6 +17,10 @@
     justify-content: space-between;
     align-items: center;
 
+    @media screen and (max-width: 1024px) {
+      max-width: 958px; // 910px
+    }
+
     @media screen and (max-width: 360px) {
       padding: 32.5px 20px;
     }
@@ -35,6 +39,10 @@
       padding-bottom: 6px;
       padding-right: 7px;
 
+      @media screen and (max-width: 1024px) {
+        max-width: 428px; // 408px
+      }
+
       @media screen and (max-width: 360px) {
         display: none;
       }
@@ -42,6 +50,10 @@
       .navbar__items {
         display: flex;
         gap: 50px;
+
+        @media screen and (max-width: 1024px) {
+          gap: 30px;
+        }
       }
 
       .navbar__link {
